backup2l (1.6) unstable; urgency=low
  * make .list.gz files independent from timezone by adding a new TIME_ZONE parameter, closes #581344
  * optimized man page to comply with Debian rules (Patch by Joachim Wiedorn, May 8 2010)
  * added some more example drivers donated by various users

 -- Gundolf Kiefer <gundolfk@web.de>  Tue,  17 Aug 2010 12:43:05 +0200

backup2l (1.5) unstable; urgency=low
  * Add self-test script to each external volume
  * changed FORMAT to truncate fractional parts from time stamps in .list.gz files (needed for Debian 5.0/Lenny)
  * backup2l.conf: added some comments on how to use SKIPCOND for certain features
  * fixed false errors with special characters, closes #291423, #305792
  * changed chown invocation ("g:u" instead of "g.u")

 -- Gundolf Kiefer <gundolfk@web.de>  Tue,  13 Dec 2009 20:13:05 +0100

backup2l (1.4) unstable; urgency=low
  * Misc. adaptions to allow directory structures as archives
  * first-time.conf: added section with donated sample drivers
  * DRIVER_AFIOZ: accesses archives only via stdin/stdout to allow files > 2GB
  * Improved POSIX compliance, closes #261950
  * Improved support for complex SKIPCOND settings including "(", ")", "!"
  * Fixed restore of files with glob(7) control characters, closes #235249
  * misc. typos in doc, closes #250672, #250671
  * adopted documentation to correctly state that MAX_FULL must be <= 8, closes #233962
  * some adaptions to Mac OS X with the help of Joe Auricchio <avarame@ml1.net>
  * turned SED_* macros into FILTER_* to allow alternative filter program instead of sed
  * install-sh: autodetects cron/daily directory (compatibility with Mac OS X)
  * install-sh: fixed error in usage (<conf-prefix>)

 -- Gundolf Kiefer <gundolfk@web.de>  Tue,  4 Jan 2005 16:10:05 +0100

backup2l (1.3) unstable; urgency=low
  * Removed "--same-order" option in tar-based drivers (fixes problems during restore)
  * Improved checking of required drivers before starting a restore operation