@@ -1,4 +1,4 @@
-Copyright (c) 2001-2003 by Gundolf Kiefer <gundolfk@web.de>
+Copyright (c) 2001-2016 by Gundolf Kiefer <gundolf.kiefer@hs-augsburg.de>
 
 This program is free software; you can redistribute it and/or modify 
 it under the terms of the GNU General Public License as published 
@@ -11,10 +11,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License 
-along with this program; if not, write to the Free Software 
-Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
-MA 02111-1307 USA.
+along with this program; if not, write to the Free Software Foundation,
+Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
 On Debian systems, the complete text of the GNU General Public
-License can be found in /usr/share/common-licenses/GPL file.
+License can be found in /usr/share/common-licenses/GPL-2 file.
 
